--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^14.0.14",
     "buidler-gas-reporter": "^0.1.3",
     "chai": "^4.2.0",
+    "decimal.js": "^10.2.0",
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.3",
     "ts-node": "^8.10.2",
