Update MIN_SWAP_FEE to MAX_SWAP_FEE. Added script to ts config.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     },
     "include": ["./scripts", "./test"],
     "files": [
+        "./update-script.ts",
         "./buidler.config.ts",
         "./node_modules/@nomiclabs/buidler-ethers/src/type-extensions.d.ts",
         "./node_modules/@nomiclabs/buidler-waffle/src/type-extensions.d.ts"
